--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "lint:eslint": "eslint --cache --max-warnings 0 \"{src,tests,types}/**/*.{vue,js,jsx,ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write \"{src,tests,types}/**/*.{vue,js,jsx,ts,tsx,json,css,less,scss,html,md}\""
+    "lint:eslint": "eslint --max-warnings 0 \"{src,tests,types}/**/*.{vue,js,jsx,ts,tsx}\" --fix",
+    "lint:prettier": "prettier --write \"{src,tests,types}/**/*.{vue,js,jsx,ts,tsx,json,css,less,scss,html,md}\"",
+    "test:unit": "vitest run"
   },
   "dependencies": {
     "axios": "^1.6.5",
     "element-plus": "^2.5.3",
+    "normalize.css": "^8.0.1",
+    "pinia": "^2.1.7",
     "vitest": "^1.2.1",
     "vue": "^3.3.11"
   },
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^9.0.0",
@@ -35,17 +39,5 @@
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
-  },
-  "lint-staged": {
-    "*.{vue,js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{css,less,scss,html,md}": [
-      "prettier --write"
-    ],
-    "package.json": [
-      "prettier --write"
-    ]
   }
 }
