--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vue3-admin",
+  "name": "vue3-admin-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode dev",
     "test": "vitest",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
@@ -16,28 +16,36 @@
   "dependencies": {
     "axios": "^1.6.5",
     "element-plus": "^2.5.3",
+    "js-cookie": "^3.0.5",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "vitest": "^1.2.1",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.5",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/test-utils": "^2.4.3",
+    "autoprefixer": "^10.4.17",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.20.1",
+    "happy-dom": "^13.3.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "sass": "^1.70.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "unplugin-auto-import": "^0.17.3",
-    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.8",
+    "vue-router-mock": "^1.0.0",
     "vue-tsc": "^1.8.25"
   }
 }
